[package]
name = "life_traveler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
item = { path = "item" }
block = { path = "block" }
chunk = { path = "chunk" }
region = { path = "region" }
world = { path = "world" }
core = { path = "core" }
register = { path = "register" }

[workspace]

members = [
    "item",
    "block",
    "chunk",
    "region",
    "world",
    "register",
    "lang",
    "core"
]