[package]
name = "register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { path = "../block" }
item = { path = "../item" }
core = { path = "../core" }
macro_register = { path = "../macro_reg" }
twox-hash = "1.6.3"
quickphf = "*"